<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/EmployeeDataForm"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <TableRow 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:gravity="center_vertical|left">
        
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EmployeeName"
            android:layout_margin="5dip"/>
        
        <EditText android:id="@+id/EmployeeName"
            android:layout_width="200dip"
            android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:gravity="center_vertical|left">
        
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EmployeeSurname"
            android:layout_margin="5dip"/>
        
        <EditText android:id="@+id/EmployeeSurname"
            android:layout_width="200dip"
            android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:gravity="center_vertical|left">
        
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EmployeeEmail"
            android:layout_margin="5dip"/>
        
        <EditText android:id="@+id/EmployeeEmail"
            android:layout_width="200dip"
            android:layout_height="wrap_content"/>
    </TableRow>
    <TableRow 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:gravity="center_vertical|left">
        
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EmployeeAge"
            android:layout_margin="5dip"/>
        
        <EditText android:id="@+id/EmployeeAge"
            android:layout_width="100dip"
            android:layout_height="wrap_content" 
            android:inputType="number"/>
    </TableRow>
    <TableRow 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:gravity="center_vertical|left">
        
        <TextView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EmployeeActive"
            android:layout_margin="5dip"/>
        
        <CheckBox android:id="@+id/EmployeeActive" />
    </TableRow>
    <TableRow 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:gravity="center_vertical|left">
        
        <Button 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ValidateCommand"
            android:onClick="ValidateCommand"/>
	</TableRow>
</TableLayout>